feat: add trips
added repo and usecase

changed usecase

feat: add trips

fix: linter errors

feat: add trips
